--- a/omsApp/op/ui/autoconvert/MAX_trajectoryScan.ui
+++ b/omsApp/op/ui/autoconvert/MAX_trajectoryScan.ui
@@ -14,7 +14,94 @@
         <string>
 
 QWidget#centralWidget {background: rgba(187, 187, 187, 255);}
-QPushButton::menu-indicator {image: url(none.png); width: 0}
+
+caTable {
+       font: 10pt;
+       background: cornsilk;
+       alternate-background-color: wheat;
+}
+
+caLineEdit {
+     border-radius: 1px;
+     background: lightyellow;
+     color: black;
+ }
+
+caTextEntry {
+    color: rgb(127, 0, 63);
+    background-color: cornsilk;
+    selection-color: #0a214c;
+    selection-background-color: wheat;
+    border: 1px groove black;
+    border-radius: 1px;
+    padding: 1px;
+}
+
+caTextEntry:focus {
+    padding: 0px;
+    border: 2px groove darkred;
+    border-radius: 1px;
+}
+
+QPushButton {
+      border-color: #00b;
+      border-radius: 2px;
+      padding: 3px;
+      border-width: 1px;
+
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						   stop:0   rgba(224, 239, 255, 255),
+						   stop:0.5 rgba(199, 215, 230, 255),
+						   stop:1   rgba(184, 214, 236, 255));
+}
+QPushButton:hover {
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						stop:0   rgba(201, 226, 255, 255),
+						stop:0.5 rgba(177, 204, 230, 255),
+						stop:1   rgba(163, 205, 236, 255));
+}
+QPushButton:pressed {
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						stop:0   rgba(174, 219, 255, 255),
+						stop:0.5 rgba(165, 199, 230, 255),
+						stop:1   rgba(134, 188, 236, 255));
+}
+
+QPushButton:disabled {
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						stop:0   rgba(174, 219, 255, 255),
+						stop:0.5 rgba(165, 199, 230, 255),
+						stop:1   rgba(134, 188, 236, 255));
+}
+
+caChoice {
+      background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                  stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+                                  stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+}
+
+caChoice &gt; QPushButton {
+      text-align: left;
+      padding: 1px;
+}
+
+caSlider::groove:horizontal {
+border: 1px solid #bbb;
+background: lightgrey;
+height: 20px;
+border-radius: 4px;
+}
+
+caSlider::handle:horizontal {
+background: red;
+border: 1px solid #777;
+width: 13px;
+margin-top: -2px;
+margin-bottom: -2px;
+border-radius: 2px;
+}
+
+
 
 </string>
     </property>
@@ -207,7 +294,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>359</x>
                     <y>105</y>
-                    <width>72</width>
+                    <width>60</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -543,7 +630,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>387</x>
                     <y>130</y>
-                    <width>36</width>
+                    <width>30</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -699,7 +786,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>400</x>
                     <y>180</y>
-                    <width>48</width>
+                    <width>40</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -909,7 +996,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>10</x>
                     <y>55</y>
-                    <width>252</width>
+                    <width>220</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -1017,7 +1104,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>10</x>
                     <y>205</y>
-                    <width>240</width>
+                    <width>220</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -1053,7 +1140,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>10</x>
                     <y>130</y>
-                    <width>264</width>
+                    <width>220</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -1089,7 +1176,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>10</x>
                     <y>80</y>
-                    <width>252</width>
+                    <width>220</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -1243,7 +1330,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>107</x>
                         <y>30</y>
-                        <width>60</width>
+                        <width>50</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -1321,7 +1408,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>27</x>
                         <y>80</y>
-                        <width>156</width>
+                        <width>130</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -1441,7 +1528,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>27</x>
                         <y>55</y>
-                        <width>156</width>
+                        <width>130</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -1693,7 +1780,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>176</x>
                         <y>5</y>
-                        <width>84</width>
+                        <width>70</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -1729,7 +1816,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>294</x>
                         <y>5</y>
-                        <width>60</width>
+                        <width>50</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -1765,7 +1852,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>403</x>
                         <y>5</y>
-                        <width>72</width>
+                        <width>60</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -1810,7 +1897,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                         <rect>
                             <x>0</x>
                             <y>0</y>
-                            <width>84</width>
+                            <width>70</width>
                             <height>20</height>
                         </rect>
                     </property>
@@ -1967,7 +2054,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>7</x>
                         <y>130</y>
-                        <width>180</width>
+                        <width>150</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -2099,7 +2186,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>77</x>
                         <y>195</y>
-                        <width>96</width>
+                        <width>80</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -2243,7 +2330,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>37</x>
                         <y>220</y>
-                        <width>144</width>
+                        <width>120</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -3763,7 +3850,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>470</x>
                     <y>263</y>
-                    <width>60</width>
+                    <width>50</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -3919,7 +4006,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>230</x>
                     <y>263</y>
-                    <width>132</width>
+                    <width>110</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -4048,7 +4135,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>348</x>
                     <y>263</y>
-                    <width>108</width>
+                    <width>100</width>
                     <height>20</height>
                 </rect>
             </property>
