--- a/omsApp/op/ui/autoconvert/MAX_trajectoryScan1.ui
+++ b/omsApp/op/ui/autoconvert/MAX_trajectoryScan1.ui
@@ -14,7 +14,94 @@
         <string>
 
 QWidget#centralWidget {background: rgba(187, 187, 187, 255);}
-QPushButton::menu-indicator {image: url(none.png); width: 0}
+
+caTable {
+       font: 10pt;
+       background: cornsilk;
+       alternate-background-color: wheat;
+}
+
+caLineEdit {
+     border-radius: 1px;
+     background: lightyellow;
+     color: black;
+ }
+
+caTextEntry {
+    color: rgb(127, 0, 63);
+    background-color: cornsilk;
+    selection-color: #0a214c;
+    selection-background-color: wheat;
+    border: 1px groove black;
+    border-radius: 1px;
+    padding: 1px;
+}
+
+caTextEntry:focus {
+    padding: 0px;
+    border: 2px groove darkred;
+    border-radius: 1px;
+}
+
+QPushButton {
+      border-color: #00b;
+      border-radius: 2px;
+      padding: 3px;
+      border-width: 1px;
+
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						   stop:0   rgba(224, 239, 255, 255),
+						   stop:0.5 rgba(199, 215, 230, 255),
+						   stop:1   rgba(184, 214, 236, 255));
+}
+QPushButton:hover {
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						stop:0   rgba(201, 226, 255, 255),
+						stop:0.5 rgba(177, 204, 230, 255),
+						stop:1   rgba(163, 205, 236, 255));
+}
+QPushButton:pressed {
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						stop:0   rgba(174, 219, 255, 255),
+						stop:0.5 rgba(165, 199, 230, 255),
+						stop:1   rgba(134, 188, 236, 255));
+}
+
+QPushButton:disabled {
+	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
+						stop:0   rgba(174, 219, 255, 255),
+						stop:0.5 rgba(165, 199, 230, 255),
+						stop:1   rgba(134, 188, 236, 255));
+}
+
+caChoice {
+      background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                  stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+                                  stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+}
+
+caChoice &gt; QPushButton {
+      text-align: left;
+      padding: 1px;
+}
+
+caSlider::groove:horizontal {
+border: 1px solid #bbb;
+background: lightgrey;
+height: 20px;
+border-radius: 4px;
+}
+
+caSlider::handle:horizontal {
+background: red;
+border: 1px solid #777;
+width: 13px;
+margin-top: -2px;
+margin-bottom: -2px;
+border-radius: 2px;
+}
+
+
 
 </string>
     </property>
@@ -207,7 +294,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>359</x>
                     <y>105</y>
-                    <width>72</width>
+                    <width>60</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -399,7 +486,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>387</x>
                     <y>130</y>
-                    <width>36</width>
+                    <width>30</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -489,7 +576,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>10</x>
                     <y>55</y>
-                    <width>252</width>
+                    <width>220</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -561,7 +648,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>10</x>
                     <y>130</y>
-                    <width>264</width>
+                    <width>220</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -606,7 +693,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>252</width>
+                        <width>220</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -973,7 +1060,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>400</x>
                     <y>160</y>
-                    <width>48</width>
+                    <width>40</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -1048,7 +1135,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                 <rect>
                     <x>10</x>
                     <y>205</y>
-                    <width>240</width>
+                    <width>220</width>
                     <height>20</height>
                 </rect>
             </property>
@@ -1321,7 +1408,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>107</x>
                                 <y>30</y>
-                                <width>60</width>
+                                <width>50</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -1399,7 +1486,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>27</x>
                                 <y>80</y>
-                                <width>156</width>
+                                <width>130</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -1519,7 +1606,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>27</x>
                                 <y>55</y>
-                                <width>156</width>
+                                <width>130</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -1771,7 +1858,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>176</x>
                                 <y>5</y>
-                                <width>84</width>
+                                <width>70</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -1807,7 +1894,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>294</x>
                                 <y>5</y>
-                                <width>60</width>
+                                <width>50</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -1843,7 +1930,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>403</x>
                                 <y>5</y>
-                                <width>72</width>
+                                <width>60</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -1888,7 +1975,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                                 <rect>
                                     <x>0</x>
                                     <y>0</y>
-                                    <width>84</width>
+                                    <width>70</width>
                                     <height>20</height>
                                 </rect>
                             </property>
@@ -2045,7 +2132,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>7</x>
                                 <y>130</y>
-                                <width>180</width>
+                                <width>150</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -2177,7 +2264,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>77</x>
                                 <y>195</y>
-                                <width>96</width>
+                                <width>80</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -2321,7 +2408,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                             <rect>
                                 <x>37</x>
                                 <y>220</y>
-                                <width>144</width>
+                                <width>120</width>
                                 <height>20</height>
                             </rect>
                         </property>
@@ -2416,7 +2503,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>466</x>
                         <y>7</y>
-                        <width>60</width>
+                        <width>50</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -2488,7 +2575,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>226</x>
                         <y>7</y>
-                        <width>132</width>
+                        <width>110</width>
                         <height>20</height>
                     </rect>
                 </property>
@@ -2524,7 +2611,7 @@ QPushButton::menu-indicator {image: url(none.png); width: 0}
                     <rect>
                         <x>344</x>
                         <y>7</y>
-                        <width>108</width>
+                        <width>100</width>
                         <height>20</height>
                     </rect>
                 </property>
